<package format="2">
	<name>frameshot</name>
	<version>0.0.1</version>
	<description>
		Point cloud frame snapshot
	</description>
	<maintainer email="arulselvam@uni-bonn.de">Arul Selvam</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>cv_bridge</depend>
	<depend>image_transport</depend>
	<depend>pcl_ros</depend>
</package>